--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "next-themes": "^0.2.1",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
